crates/runtime/tests/search/snapshots/integration_models__search__duckdb-duckdb-no_text_engine-view_union_all_join-hybrid_single_column_megascience_vector_search_sql_projection_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, question, subject, trunc(_score, 3) as _score FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
Could not prepare EXPLAIN plan. SQL error: [{"id":468,"answer":"The multiples of 4 between 1 and 30 are 4, 8, 12, 16, 20, 24, and 28. Counting these, there are $\\boxed{7}$ multiples.","question":"How many multiples of 4 are there between 1 and 30? List them and count the total.","subject":"math","_score":0.54},{"id":1277,"answer":"The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\).","question":"Which base number, when raised to the fifth power, equals thirty-two?","subject":"math","_score":0.538},{"id":189,"answer":"\\[\n2 - 2(-3)^2 = 2 - 2(9) = 2 - 18 = \\boxed{-16}\n\\]","question":"Evaluate the expression \\( 2 - 2x^2 \\), where \\( x = -3 \\).","subject":"math","_score":0.537},{"id":948,"answer":"The fifth root of 32 is \\(\\boxed{2}\\), because \\(2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\).","question":"What is the fifth root of 32?","subject":"math","_score":0.53}]
