crates/runtime/tests/search/snapshots/integration_models__search__duckdb-duckdb-no_text_engine-view_union_all_join-multi_embeddings_megascience_vector_search_sql_filtered_index_only_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary', answer, 4) WHERE subject != 'math' ORDER BY _score DESC, id"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                         |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: _score DESC NULLS FIRST, vector_search(qs, Utf8("secondary"), answer, Int64(4)).id ASC NULLS LAST                                                                                      |
|               |   Projection: vector_search(qs, Utf8("secondary"), answer, Int64(4)).id, trunc(vector_search(qs, Utf8("secondary"), answer, Int64(4))._score, Int64(3)) AS _score                            |
|               |     TableScan: vector_search(qs, Utf8("secondary"), answer, Int64(4)) projection=[_score, id], full_filters=[vector_search(qs, Utf8("secondary"), answer, Int64(4)).subject != Utf8("math")] |
| physical_plan | SortPreservingMergeExec: [_score@1 DESC, id@0 ASC NULLS LAST]                                                                                                                                |
|               |   SortExec: expr=[_score@1 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                          |
|               |     ProjectionExec: expr=[id@1 as id, trunc(_score@0, 3) as _score]                                                                                                                          |
|               |       RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1, maintains_sort_order=true                                                                                        |
|               |         ProjectionExec: expr=[_score@1 as _score, id@0 as id]                                                                                                                                |
|               |           SortPreservingMergeExec: [_score@1 DESC NULLS LAST, id@0 ASC], fetch=4                                                                                                             |
|               |             CooperativeExec                                                                                                                                                                  |
|               |               SortExec: TopK(fetch=4), expr=[_score@1 DESC NULLS LAST, id@0 ASC], preserve_partitioning=[true]                                                                               |
|               |                 BytesProcessedExec                                                                                                                                                           |
|               |                   RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                       |
|               |                     CooperativeExec                                                                                                                                                          |
|               |                       DuckDBVectorQueryExec embedded_column=answer_embedding, metric=cosine, dims=256, filters=[subject != Utf8("math")], limit=4, scan=brute_force, projection=[id, _score] |
|               |                                                                                                                                                                                              |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
