crates/runtime/tests/search/snapshots/integration_models__search__duckdb-duckdb-no_text_engine-view_union_all_join-multi_embeddings_megascience_vector_search_sql_index_only_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score  FROM vector_search(qs, 'second', answer) order by _score desc, id desc LIMIT 4;"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                    |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: _score DESC NULLS FIRST, vector_search(qs, Utf8("second"), answer).id DESC NULLS FIRST, fetch=4                                   |
|               |   Projection: vector_search(qs, Utf8("second"), answer).id, trunc(vector_search(qs, Utf8("second"), answer)._score, Int64(3)) AS _score |
|               |     TableScan: vector_search(qs, Utf8("second"), answer) projection=[_score, id]                                                        |
| physical_plan | SortExec: TopK(fetch=4), expr=[_score@1 DESC, id@0 DESC], preserve_partitioning=[false]                                                 |
|               |   CoalescePartitionsExec                                                                                                                |
|               |     ProjectionExec: expr=[id@0 as id, trunc(_score@1, 3) as _score]                                                                     |
|               |       CooperativeExec                                                                                                                   |
|               |         BytesProcessedExec                                                                                                              |
|               |           RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                          |
|               |             DuckDBVectorQueryExec embedded_column=answer_embedding, metric=cosine, dims=256, scan=hnsw, projection=[id, _score]         |
|               |                                                                                                                                         |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------+
