crates/runtime/tests/search/snapshots/integration_models__search__duckdb-duckdb-no_text_engine-view_union_all_join-multi_embeddings_megascience_with_where_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.26",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "Relative or \"stress\" polycythaemia, which is secondary to a depletion in the plasma volume."
        ]
      },
      "primary_key": {
        "id": 890
      }
    },
    {
      "_score": "0.21",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The metallic bonds become longer and weaker as the atoms get larger, resulting in lower boiling points."
        ]
      },
      "primary_key": {
        "id": 1303
      }
    },
    {
      "_score": "0.15",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "More than 10 years of follow-up is required, as late recurrences (beyond 12 years) have been reported in 5%–10% of patients."
        ]
      },
      "primary_key": {
        "id": 449
      }
    },
    {
      "_score": "0.15",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The main advantages of PI chemotherapy are reduced hematologic toxicity and lower total cost because fewer drugs are used."
        ]
      },
      "primary_key": {
        "id": 819
      }
    }
  ]
}
